--- a/pages/Litografia.html
+++ b/pages/Litografia.html
@@ -10,6 +10,7 @@
     <!--enlace a bootstap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>Litografia</title>
 </head>
 <body>
@@ -41,7 +42,7 @@
                             <a href="Litografia.html">Litografia</a>
                             </li>
                         <li class="nav-item">
-                            <a href="Encuadernación.html">Encuadernación</a>
+                            <a href="Nosotros.html">Nosotros</a>
                             </li>
                         <li class="nav-item">
                             <a href="Contactenos.html">Contactenos</a>
@@ -73,7 +74,43 @@
     
         </header>
         <main></main>
-        <footer></footer>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col">
+                        <h4>Lito Impacto</h4>
+                        <ul>
+                            <li><a href="pages/Nosotros.html">Nosotros</a></li>
+                            <li><a href="#">Politica de trabajo</a></li>
+                            <li><a href="#">Fidelización</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>Portafolio</h4>
+                        <ul>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Sellos</a></li>
+                            <li><a href="#">Tarjetas</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>Servicios</h4>
+                        <ul>
+                            <li><a href="#">Encuadernación</a></li>
+                            <li><a href="#">Publicidad</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>Contacto</h4>
+                        <div class="social-links">
+                            <a href="#"><i class="bi bi-facebook"></i></a>
+                            <a href="https://www.instagram.com/litoimpacto/"><i class="bi bi-instagram"></i></a>
+                            <a href="https://api.whatsapp.com/send?phone=3152905196&text=Hola, Necesito más información!"><i class="bi bi-whatsapp"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </footer> 
         <!--Script de bootstrap-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     
