--- a/index.html
+++ b/index.html
@@ -33,13 +33,10 @@
                       <a href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                      <a href="pages/Sellos.html">Sellos</a>
+                      <a href="pages/Portafolio.html">Portafolio</a>
                     </li>
                     <li class="nav-item">
-                      <a href="pages/Publicidad.html">Publicidad</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="pages/Litografia.html">Litografia</a>
+                      <a href="pages/Servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item">
                       <a href="pages/Nosotros.html">Nosotros</a>
@@ -94,7 +91,9 @@
                 <div class="text">
                     <h3>Identidad</h3>
                     <p>Creamos y potenciamos tu identidad de marca acorde a tus clientes destino.</p>
-                    <button class="primary-button">Ver mas</button>
+                    <a href="pages/Servicios.html">
+                      <button class="primary-button">Ver mas</button>
+                    </a>
                 </div>
             </article>
 
@@ -103,7 +102,9 @@
                 <div class="text">
                     <h3>Impresión</h3>
                     <p>Plasmamos y te sugerimos diseños innovadores con los cuales difundimos tu marca.</p>
-                    <button class="primary-button">Ver mas</button>
+                    <a href="pages/Servicios.html">
+                      <button class="primary-button">Ver mas</button>
+                    </a>
                 </div>
             </article>
 
@@ -112,7 +113,7 @@
                 <div class="text">
                     <h3>Sellos</h3>
                     <p>Podemos hacer de tu marca y logo una firma a través de sellos empresariales.</p>
-                    <a href="pages/Sellos.html">
+                    <a href="pages/Portafolio.html">
                       <button class="primary-button">Ver mas</button>
                     </a>
                 </div>
@@ -123,7 +124,9 @@
                 <div class="text">
                     <h3>Eventos</h3>
                     <p>Desde invitaciones hasta decoraciones hacemos tus eventos memorables</p>
-                    <button class="primary-button">Ver mas</button>
+                    <a href="pages/Portafolio.html">
+                      <button class="primary-button">Ver mas</button>
+                    </a>
                 </div>
               </article>
         </div>
@@ -197,23 +200,21 @@
                   <h4>Lito Impacto</h4>
                   <ul>
                       <li><a href="pages/Nosotros.html">Nosotros</a></li>
-                      <li><a href="#">Politica de trabajo</a></li>
-                      <li><a href="#">Fidelización</a></li>
                   </ul>
               </div>
               <div class="footer-col">
                   <h4>Portafolio</h4>
                   <ul>
                       <li><a href="#">FAQ</a></li>
-                      <li><a href="pages/Sellos.html">Sellos</a></li>
-                      <li><a href="pages/Sellos.html">Tarjetas</a></li>
+                      <li><a href="pages/Portafolio.html">Sellos</a></li>
+                      <li><a href="pages/Portafolio.html">Tarjetas</a></li>
                   </ul>
               </div>
               <div class="footer-col">
                   <h4>Servicios</h4>
                   <ul>
-                      <li><a href="#">Encuadernación</a></li>
-                      <li><a href="#">Publicidad</a></li>
+                      <li><a href="pages/Servicios.html">Encuadernación</a></li>
+                      <li><a href="pages/Servicios.html">Publicidad</a></li>
                   </ul>
               </div>
               <div class="footer-col">
