--- a/pages/Contactenos.html
+++ b/pages/Contactenos.html
@@ -34,13 +34,10 @@
                               <a href="../index.html">Inicio</a>
                           </li>
                           <li class="nav-item">
-                              <a href="Sellos.html">Sellos</a>
+                              <a href="Portafolio.html">Portafolio</a>
                           </li>
                           <li class="nav-item">
-                              <a href="Publicidad.html">Publicidad</a>
-                              </li>
-                          <li class="nav-item">
-                              <a href="Litografia.html">Litografia</a>
+                              <a href="Servicios.html">Servicios</a>
                               </li>
                           <li class="nav-item">
                               <a href="Nosotros.html">Nosotros</a>
@@ -107,24 +104,21 @@
                   <div class="footer-col">
                       <h4>Lito Impacto</h4>
                       <ul>
-                          <li><a href="pages/Nosotros.html">Nosotros</a></li>
-                          <li><a href="#">Politica de trabajo</a></li>
-                          <li><a href="#">Fidelización</a></li>
+                          <li><a href="Nosotros.html">Nosotros</a></li>
                       </ul>
                   </div>
                   <div class="footer-col">
                       <h4>Portafolio</h4>
                       <ul>
-                          <li><a href="#">FAQ</a></li>
-                          <li><a href="#">Sellos</a></li>
-                          <li><a href="#">Tarjetas</a></li>
+                          <li><a href="Portafolio.html">Sellos</a></li>
+                          <li><a href="Portafolio.html">Tarjetas</a></li>
                       </ul>
                   </div>
                   <div class="footer-col">
                       <h4>Servicios</h4>
                       <ul>
-                          <li><a href="#">Encuadernación</a></li>
-                          <li><a href="#">Publicidad</a></li>
+                          <li><a href="Servicios.html">Encuadernación</a></li>
+                          <li><a href="Servicios.html">Publicidad</a></li>
                       </ul>
                   </div>
                   <div class="footer-col">
