--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -33,13 +33,10 @@
                             <a href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a href="Sellos.html">Sellos</a>
+                            <a href="Portafolio.html">Portafolio</a>
                         </li>
                         <li class="nav-item">
-                            <a href="Publicidad.html">Publicidad</a>
-                            </li>
-                        <li class="nav-item">
-                            <a href="Litografia.html">Litografia</a>
+                            <a href="Servicios.html">Servicios</a>
                             </li>
                         <li class="nav-item">
                             <a href="Nosotros.html">Nosotros</a>
@@ -75,7 +72,7 @@
         </header>
         <main>
 
-            <div class="row mt-5 pt-5">
+            <div class="row mt-5 pt-5 mx-0">
               <div class="col-12 col-sm-6 mt-3">
                 <div class="ratio ratio-16x9">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/7LyC9EazdcY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -110,7 +107,7 @@
 
 
 
-        <div class="row mt-5 pt-5">
+        <div class="row mt-5 pt-5 mx-0">
           <div class="col-12 col-sm-6 mt-3">
             <div class="ratio ratio-16x9">
               <iframe src="../Assets/pexels-creative-film-3936483-640x360-30fps.mp4">
@@ -133,24 +130,21 @@
                   <div class="footer-col">
                       <h4>Lito Impacto</h4>
                       <ul>
-                          <li><a href="pages/Nosotros.html">Nosotros</a></li>
-                          <li><a href="#">Politica de trabajo</a></li>
-                          <li><a href="#">Fidelización</a></li>
+                          <li><a href="Nosotros.html">Nosotros</a></li>
                       </ul>
                   </div>
                   <div class="footer-col">
                       <h4>Portafolio</h4>
                       <ul>
-                          <li><a href="#">FAQ</a></li>
-                          <li><a href="#">Sellos</a></li>
-                          <li><a href="#">Tarjetas</a></li>
+                          <li><a href="Portafolio.html">Sellos</a></li>
+                          <li><a href="Portafolio.html">Tarjetas</a></li>
                       </ul>
                   </div>
                   <div class="footer-col">
                       <h4>Servicios</h4>
                       <ul>
-                          <li><a href="#">Encuadernación</a></li>
-                          <li><a href="#">Publicidad</a></li>
+                          <li><a href="Servicios.html">Encuadernación</a></li>
+                          <li><a href="Servicios.html">Publicidad</a></li>
                       </ul>
                   </div>
                   <div class="footer-col">
